--- a/public/chat.html
+++ b/public/chat.html
@@ -4,7 +4,7 @@
        <!-- <link rel="stylesheet" href="/css/styles.css"> -->
        <title>Baat-Cheat</title>
        <link rel="icon" href="./img/favicon.png">
-       <link rel="stylesheet" href="/css/styles.min.css">
+       <link rel="stylesheet" href="/css/styles.css">
 
     </head>
 
